# tgraph-bot-source

./: .gitignore  .pre-commit-config.yaml  .weblate  Dockerfile  README.md  config.yml.sample  docker-compose.example.yml  docker-compose.example01.yml  docker-compose.example02.yml  ecosystem.config.json  fix_broken_calls.py  fix_config_migration.py  fix_type_issues.py  i18n.py  main.py  pyproject.toml  pyright_global_ignores_audit.md  requirements.txt  tgraph.py
.augment/rules/: python-rules.md
.cursor/rules/: python_rules.mdc
.cursor/rules/taskmaster/: dev_workflow.mdc  taskmaster.mdc
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: .yamllint.yml  docker.yml  i18n-check.yml  i18n-sync.yml  manual-release.yml  release.yml  sync-translations.yml  translation-pr.yml
.taskmaster/: config.json  state.json
.taskmaster/reports/: task-complexity-report.json
bot/: __init__.py  commands.py  extensions.py  permission_checker.py  startup_sequence.py  update_tracker.py
bot/commands/: __init__.py  about.py  config.py  my_stats.py  test_scheduler.py  update_graphs.py  uptime.py
config/: __init__.py  config.py  config.yml.sample  manager.py  schema.py
config/modules/: __init__.py  constants.py  defaults.py  loader.py  options.py  sanitizer.py  validator.py
data/: scheduler_state.json
docs/: TRANSLATION.md  TRANSLATION_COMPILATION.md  WEBLATE_SETUP.md  discord-permissions-migration.md  dry-consolidation-plan.md  graph_customization_guide.md  graph_development_guide.md  graph_troubleshooting_guide.md  project_overview.md  slash_command_design.md  test_reorganization.md
graphs/: generate_graphs.py  generate_graphs_user.py  graph_manager.py  user_graph_manager.py
graphs/graph_modules/: base_graph.py  daily_play_count_graph.py  data_fetcher.py  graph_factory.py  play_count_by_dayofweek_graph.py  play_count_by_hourofday_graph.py  play_count_by_month_graph.py  sample_graph.py  top_10_platforms_graph.py  top_10_users_graph.py  utils.py
graphs/graph_modules/tautulli_graphs/: __init__.py  daily_play_count_graph.py  play_count_by_dayofweek_graph.py  play_count_by_hourofday_graph.py  play_count_by_month_graph.py  top_10_platforms_graph.py  top_10_users_graph.py
i18n/: da.yml  en.yml
locale/: messages.pot
locale/da/LC_MESSAGES/: messages.mo  messages.po
locale/en/LC_MESSAGES/: messages.po
scripts/: PRD.txt  compile_translations.py  extract_strings.py  fix_english_po.py  update_translations.py  validate_weblate_config.py  weblate_api.py
scripts/i18n/: __init__.py  ci_helpers.py  compile_translations.py  dev-helpers.py  extract_strings.py  update_translations.py  weblate_sync.py
scripts/weblate/: __init__.py  api.py  validate_config.py
scripts/workflows/: __init__.py  check_release_conditions.py  check_translation_status.py  fetch_weblate_translations.py  generate_release_notes.py
scripts/workflows/common/: __init__.py  git_utils.py  github_utils.py  workflow_utils.py
src/tgraph_bot/: __init__.py  i18n.py  main.py
src/tgraph_bot/bot/: __init__.py  extensions.py  permission_checker.py  startup_sequence.py  update_tracker.py
src/tgraph_bot/config/: manager.py  schema.py
src/tgraph_bot/graphs/: graph_manager.py  user_graph_manager.py
src/tgraph_bot/utils/: __init__.py
tests/: __init__.py  conftest.py  test_async_threading.py  test_background_task_management.py  test_base_command_cog.py  test_base_graph.py  test_command_utils.py  test_compile_translations.py  test_config_commands.py  test_config_manager.py  test_config_schema.py  test_data_fetcher.py  test_discord_file_utils.py  test_end_to_end_customization.py  test_enhanced_error_handling.py  test_error_handler.py  test_extensions.py  test_graph_customization_validation.py  test_graph_factory.py  test_graph_manager_architecture.py  test_graph_utils.py  test_i18n.py  test_i18n_utils.py  test_locale_structure.py  test_main.py  test_memory_management.py  test_non_blocking_graph_generation.py  test_project_structure.py  test_recovery_and_schedule_integrity.py  test_sample_graph.py  test_translation_compiler.py  test_update_tracker_config.py  test_update_tracker_enhanced.py  test_update_tracker_error_handling.py  test_weblate_config.py
tests/integration/: test_async_threading.py  test_background_task_management.py  test_end_to_end_customization.py  test_enhanced_error_handling.py  test_graph_customization_validation.py  test_graph_manager_architecture.py  test_locale_structure.py  test_memory_management.py  test_non_blocking_graph_generation.py  test_palette_priority_integration.py  test_project_structure.py  test_recovery_and_schedule_integrity.py
tests/unit/: test_date_calculation_bug.py  test_i18n.py  test_main.py  test_timezone_handling.py
tests/unit/bot/: test_cog_base_functionality.py  test_extensions.py  test_permission_checker.py  test_startup_sequence.py  test_update_tracker.py  test_update_tracker_config.py  test_update_tracker_enhanced.py  test_update_tracker_error_handling.py  test_update_tracker_fixed_time_fix.py  test_update_tracker_next_update_bug.py
tests/unit/config/: test_graph_dimensions.py  test_manager.py  test_schema.py  test_timestamp_format_config.py
tests/unit/scripts/: test_compile_translations.py  test_validate_weblate_config.py
tests/unit/utils/: test_async_helpers.py  test_base_command_cog.py  test_cli_args.py  test_cli_paths.py  test_command_utils.py  test_discord_embed_timestamps.py  test_discord_file_utils.py  test_ephemeral_utils.py  test_error_handler.py  test_i18n_utils.py  test_test_helpers.py  (+3 more)
tests/utils/: __init__.py  async_helpers.py  cog_helpers.py  graph_helpers.py  test_helpers.py
utils/: __init__.py  base_command_cog.py  command_utils.py  config_utils.py  discord_file_utils.py  error_handler.py  i18n_utils.py  progress_utils.py  translation_compiler.py
utils/cli/: __init__.py  args.py  paths.py
utils/core/: __init__.py  config_utils.py  error_handler.py  version.py
utils/discord/: __init__.py  base_command_cog.py  command_utils.py  discord_file_utils.py  progress_utils.py
utils/i18n/: __init__.py  i18n_utils.py  translation_compiler.py
(+125 files in other folders)
