[build-system]
requires = ["uv_build>=0.7.20,<0.8"]
build-backend = "uv_build"

[project]
name = "tgraph-bot"
version = "1.0.0"
description = "A Discord bot for automatically generating and posting Tautulli graphs"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "engels74", email = "141435164+engels74@users.noreply.github.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Chat",
    "Topic :: Multimedia :: Graphics :: Presentation",
]
requires-python = ">=3.12"
dependencies = [
    "discord.py>=2.5.2",
    "pydantic>=2.11.7",
    "matplotlib>=3.10.5",
    "seaborn>=0.13.2",
    "httpx>=0.28.1",
    "pyyaml>=6.0.2",
]

[dependency-groups]
dev = [
    # Testing framework
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
    # Linting and formatting
    "ruff>=0.12.7",
    # Type checking
    "basedpyright>=1.31.0",
    # Translation/i18n utilities
    "polib>=1.2.0",
    # System utilities
    "psutil>=7.0.0",
    # CLI utilities
    "rich>=14.1.0",
    # Workflow utilities
    "semver>=3.0.4",
    "toml>=0.10.2",
    # Type stubs for better type safety
    "pandas-stubs>=2.3.0.250703",
    "types-polib>=1.2.0.20250401",
    "types-psutil>=7.0.0.20250801",
    "types-pyyaml>=6.0.12.20250516",
    "types-requests>=2.32.4.20250611",
    "matplotlib-stubs>=0.2.0",
]

[project.urls]
Homepage = "https://github.com/engels74/tgraph-bot-source"
Repository = "https://github.com/engels74/tgraph-bot-source"
Issues = "https://github.com/engels74/tgraph-bot-source/issues"

[project.scripts]
tgraph-bot = "tgraph_bot:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=src/tgraph_bot",
    "--cov-report=term-missing",
    "--cov-report=html",
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src/tgraph_bot"]
omit = ["tests/*", "*/test_*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.ruff]
target-version = "py312"

[tool.basedpyright]
pythonVersion = "3.12"
typeCheckingMode = "recommended"
exclude = ["htmlcov", ".venv"]
